[Fix]협업자 목록 조회